[package]
name = "tasuki"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Tasuki (襷) — configurable statusline for Neovim with mode, file, git, and diagnostics sections"
homepage = "https://github.com/pleme-io/tasuki"
repository = "https://github.com/pleme-io/tasuki"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "statusline", "lualine", "ui"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
kamon = { path = "../kamon", version = "0.1.0" }
